# Alps-ci-cd

./: .gitattributes  Makefile  ReadStats.pl  alps2yaml.pl  alps_cfg.yaml  alps_cfg_adl_cam.yaml  alps_cfg_annealing.yaml  alps_cfg_cnl.yaml  alps_cfg_dg2_kaolin.yaml  alps_cfg_dg2p5_cam.yaml  alps_cfg_glv.yaml  alps_cfg_icl.yaml  alps_cfg_icllp.yaml  alps_cfg_lnl_cam.yaml  alps_cfg_ptl_cam.yaml  alps_cfg_pvc.yaml  alps_cfg_pvc_a21.yaml  alps_cfg_pvc_a21_cam.yaml  alps_cfg_pvc_cam.yaml  alps_cfg_pvc_kaolin.yaml  alps_cfg_pvc_scaled.yaml  alps_cfg_pvcdp_cam.yaml  alps_cfg_pvcdp_kaolin.yaml  alps_cfg_pvck2xeu_kaolin.yaml  alps_cfg_pvcxt_cam.yaml  alps_cfg_pvcxt_kaolin.yaml  alps_cfg_pvcxttrend_cam.yaml  alps_cfg_rltb_ec_0_5_cam.yaml  alps_cfg_rltconcept_cam.yaml  alps_cfg_tgl.yaml  alps_cfg_tgl_reduced.yaml  alps_cfg_tgldg2_cam.yaml  alps_cfg_tglhp.yaml  alps_cfg_tglhp_cam.yaml  alps_cfg_xe2_2xsp_kaolin.yaml  alps_cfg_xe2_cam.yaml  alps_cfg_xe3_cam.yaml  alps_formula.yml  bt.cmd  build_alps.py  (+51 more)
Config_EE_Analysis/: study_settings.cfg
GTPin_Opcode_Analysis/: GTPin_opcode_states_power_estimation_v2.py  regex_test.py
HLP/: ccf_yaml.yaml  change_instances.py  chosen_wl.txt  cmd_arguments.yaml  copy_gsim_stat.pl  hlp_cdyn_weights.yaml  hlp_cluster_scaling.csv  hlp_fps_freq_scaling.csv  hlp_process_scaling.csv  hlpm_predict.py  hlpm_training.py  input.txt  instances.yaml  mapping.yaml  wl_instances.txt  (+1 more)
StatParser/: CMakeLists.txt  ExprParser.cpp  ExprParser.h  StatParser  StatParser.cpp  StatParser.sln  StatParser.vcxproj  StatParser.vcxproj.filters  makefile  readme.txt
(+535 files in other folders)
